--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,9 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.max-content{
+  max-width:1280px;
+  margin-right:auto;
+  margin-left:auto;
+}
