--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,3 +30,62 @@ body {
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
 }
 
+
+/* globals.css */
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(255, 255, 255, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.spinner {
+  border: 4px solid rgba(255, 255, 255, 0.3);
+  border-top: 4px solid #CE2127;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.transparent-background {
+  background: rgba(200, 200, 200, 0.3)
+}
+
+.light-pink-shadow {
+  box-shadow: 0 1px 12px rgba(255, 182, 193, 0.3) !important; 
+  overflow: visible !important;
+}
+
+/* Đảm bảo layout nhất quán */
+.gallery-item {
+  display: inline-block;
+  width: 100%; /* Mặc định ảnh chiếm 100% chiều rộng container */
+  max-width: 150px; /* Giới hạn kích thước tối đa */
+  margin: 0 auto; /* Canh giữa */
+  text-align: center; /* Canh giữa caption */
+}
+
+.gallery-image {
+  width: 100%; /* Ảnh chiếm toàn bộ chiều rộng của gallery-item */
+  height: auto; /* Giữ tỷ lệ ảnh */
+  object-fit: cover; /* Đảm bảo ảnh không bị méo */
+}
+
+/* Media query cho mobile */
+@media (max-width: 768px) {
+  .gallery-item {
+    max-width: 20px; /* Giảm kích thước ảnh cho mobile */
+  }
+}
