--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,6 +30,9 @@ body {
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
 }
 
+.shadow-top {
+  box-shadow: 0 0px 4px rgba(0, 0, 0, 0.1); /* Bóng đổ phía trên */
+}
 
 /* globals.css */
 .loading-overlay {
