--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,21 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
-}
+} */
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  /* color: var(--foreground);
+  background: var(--background); */
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -86,6 +86,9 @@ body {
   object-fit: cover; /* Đảm bảo ảnh không bị méo */
 }
 
+.swiper-wrapper{
+  display: flex;
+}
 /* Media query cho mobile */
 @media (max-width: 768px) {
   .gallery-item {
