--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,13 @@ body {
   margin-left:auto;
 }
 
+/* Ẩn toast debug Next.js */
+[data-nextjs-toast] {
+  display: none !important;
+}
+
+
+
 .box-shadow-basic {
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
 }
